--- a/Informes/pom.xml
+++ b/Informes/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>jaxen</artifactId>
             <version>1.2.0</version> <!-- or the latest version available -->
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>Game</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
