--- a/Informes/pom.xml
+++ b/Informes/pom.xml
@@ -18,7 +18,6 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
@@ -27,7 +26,7 @@
         <dependency>
             <groupId>jaxen</groupId>
             <artifactId>jaxen</artifactId>
-            <version>1.2.0</version> <!-- or the latest version available -->
+            <version>1.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.example</groupId>
